# universal-realtime-stt

./: .gitignore  .gitmodules  CHANGELOG.md  CLAUDE.md  README.md  benchmark.py  config.py  pyproject.toml  pytest_config.py  requirements.txt
doc/: 2026-02-20-065622-correct_close_on_provider_exit.txt  plan_universal_realtime_audio.md  poster-ml-prague-2026-stt-benchmark.md  poster.md  report.md  spec_universal_realtime_audio.md
doc/adr/: 0001 Use Official SDKs for ElevenLabs and Speechmatics STT.md  0002 Add Speaker Field to TranscriptEvent.md  0003 Add TTS Protocol with ElevenLabs Provider.md  0004 Keep Raw WebSocket for Cartesia Deepgram Google Gemini.md  0005 Extract Recv Loop Error Handling into recv_guard.md
doc/provider_details/: gemini-stt-analysis.md
helpers/: collect_reports.py  semantic_understanding.py  transcribe.py  transcript_ingest.py
lib/: stt_provider_gemini_live.py
tests/: test_diff.py  test_stt.py  test_unit.py
universal_realtime_audio/: _event_queue.py  stt.py  stt_provider.py  stt_provider_cartesia.py  stt_provider_deepgram.py  stt_provider_elevenlabs.py  stt_provider_gemini_live.py  stt_provider_google.py  stt_provider_speechmatics.py  tts_provider_elevenlabs.py  utils.py
universal_realtime_stt_tts/: _event_queue.py  config.py  stt.py  stt_provider.py  stt_provider_cartesia.py  stt_provider_deepgram.py  stt_provider_elevenlabs.py  stt_provider_gemini_live.py  stt_provider_google.py  stt_provider_speechmatics.py  tts_provider.py  tts_provider_elevenlabs.py  utils.py
