[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "universal-realtime-stt-tts"
version = "0.2.0"
description = "Multiprovider realtime speech-to-text and text-to-speech library with unified async interface"
authors = [
  { name = "Tomáš Kubeš" }
]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
keywords = ["speech-to-text", "text-to-speech", "stt", "tts", "realtime", "websocket", "asr", "transcription"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Multimedia :: Sound/Audio :: Speech",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Framework :: AsyncIO",
  "Typing :: Typed",
]
dependencies = [
  "websockets>=16.0.0",
  "python-dotenv>=1.2.1",
]

[project.optional-dependencies]
elevenlabs = ["elevenlabs>=2.0.0"]
speechmatics = ["speechmatics-rt>=1.0.0"]
google = ["google-cloud-speech>=2.36.0"]
gemini = ["google-genai>=1.64.0"]
benchmark = ["diff-match-patch>=20241021"]
semantic = ["google-genai>=1.64.0"]
dev = ["pytest"]
all = [
  "universal-realtime-stt-tts[elevenlabs,speechmatics,google,gemini,benchmark]",
]

[tool.setuptools.packages.find]
include = ["universal_realtime_stt_tts*"]

[project.urls]
Homepage = "https://github.com/mr-napik/universal-realtime-stt-tts"
"Bug Tracker" = "https://github.com/mr-napik/universal-realtime-stt-tts/issues"
